--- a/SC1015 mini project.ipynb
+++ b/SC1015 mini project.ipynb
@@ -9,15 +9,12 @@
     "\n",
     "---\n",
     "\n",
-    "### Predicting the risks of different age groups based on their demographic characteristics such as gender, height, weight and smoking status.\n",
-    "### Analyzing the effect of lifestyle and environmental factors on the risk of cardiovascular disease.\n",
-    "\n",
-    "### Detecting patterns between levels of physical activity, blood pressure and cholesterol levels with likelihood of developing cardiovascular disease among individuals\n"
+    "### Predicting the risks of different age groups based on their whether they smoke, drink alcohol, or have high cholestrol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 119,
    "id": "32dfe692",
    "metadata": {},
    "outputs": [],
@@ -28,6 +25,7 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt # we only need pyplot\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "#Import ML lib\n",
     "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
@@ -193,16 +191,6 @@
    "source": [
     "data = pd.read_csv('heart_data.csv')\n",
     "data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eecb1526",
-   "metadata": {},
-   "source": [
-    "ok so i have no idea why the age is so high (pls help for this)\n",
-    "and also im assuming we have to see whether or not an individual has high blood pressure and then see the factors that may affect it such as smoking and drinking alcohol \n",
-    "and im cleaning the dataset in the sense where we only look at individuals of height between 160 and 175 cuz apparently avg singaporean height is 168 ish i think"
    ]
   },
   {
@@ -383,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e785ac84",
+   "id": "79625dd5",
    "metadata": {},
    "outputs": [
     {
@@ -444,40 +432,44 @@
    "id": "ab06af2a",
    "metadata": {},
    "source": [
-    "# Machine Learning"
+    "# Machine Learning\n",
+    "##### We use 3 types of Machine Learning\n",
+    "    1. Gradient Boosting Classifier\n",
+    "        Accuracy: 0.65\n",
+    "    2. Logistic Regression\n",
+    "        Accuracy: 0.64\n",
+    "    3. SGD Classifier\n",
+    "        Accuracy: 0.52\n",
+    "    \n",
+    "Since Gradient Boosting Classifier has the highest accuracy out of the 3 we will use it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 134,
    "id": "491449ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaner = cleaned.drop('cardio',axis=1)\n",
+    "predictor = pd.DataFrame(cleaned[[\"smoke\", \"alco\", \"active\", \"cholesterol\", \"age\"]])\n",
+    "response = pd.DataFrame(cleaned['cardio'])\n",
     "\n",
-    "xTrain, xVal, yTrain, yVal = train_test_split(pd.DataFrame(cleaned[\"smoke\"]), pd.DataFrame(cleaner), test_size = 0.2)\n",
+    "xTrain, xVal, yTrain, yVal = train_test_split(predictor, response, test_size = 0.2, random_state=123)\n",
     "MLList = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 135,
    "id": "9e2dab32",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "y should be a 1d array, got an array of shape (6463, 13) instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20872/3524099932.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mclassifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGradientBoostingClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m42\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpredictor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxTrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myTrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0myPred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpredictor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxVal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myVal\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myPred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mMLList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'GradientBoostingClassifier'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\_gb.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, monitor)\u001b[0m\n\u001b[0;32m    418\u001b[0m         \u001b[0msample_weight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_check_sample_weight\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    419\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 420\u001b[1;33m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcolumn_or_1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwarn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    421\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    422\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mis_classifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     61\u001b[0m             \u001b[0mextra_args\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mextra_args\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m             \u001b[1;31m# extra_args > 0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcolumn_or_1d\u001b[1;34m(y, warn)\u001b[0m\n\u001b[0;32m    919\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    920\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 921\u001b[1;33m     raise ValueError(\n\u001b[0m\u001b[0;32m    922\u001b[0m         \u001b[1;34m\"y should be a 1d array, \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    923\u001b[0m         \"got an array of shape {} instead.\".format(shape))\n",
-      "\u001b[1;31mValueError\u001b[0m: y should be a 1d array, got an array of shape (6463, 13) instead."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(*args, **kwargs)\n"
      ]
     }
    ],
@@ -486,13 +478,12 @@
     "predictor = classifier.fit(xTrain, yTrain)\n",
     "yPred = predictor.predict(xVal)\n",
     "accuracy = accuracy_score(yVal, yPred)\n",
-    "MLList['GradientBoostingClassifier'] = accuracy\n",
-    "print(accuracy)"
+    "MLList['GradientBoostingClassifier'] = accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 136,
    "id": "7f73d00e",
    "metadata": {},
    "outputs": [
@@ -515,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 137,
    "id": "ac4dd820",
    "metadata": {},
    "outputs": [
@@ -538,36 +529,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 138,
    "id": "ee40cd22",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'GradientBoostingClassifier': 0.5451732673267327,\n",
-       " 'LogisticRegression': 0.5451732673267327,\n",
-       " 'SGDClassifier': 0.5451732673267327}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GradientBoostingClassifier has a accuracy of \t 0.6398514851485149\n",
+      "LogisticRegression has a accuracy of \t 0.6386138613861386\n",
+      "SGDClassifier has a accuracy of \t 0.49257425742574257\n"
+     ]
     }
    ],
    "source": [
-    "MLList"
+    "for ml, acc in MLList.items():\n",
+    "    print(\"{} has a accuracy of \\t\".format(ml),acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ef155c75",
+   "execution_count": null,
+   "id": "34d1817f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Add Classification Accuracy"
-   ]
+   "source": []
   }
  ],
  "metadata": {
